; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_is_agent.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_is_agent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"\09 \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @vlc_http_is_agent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_http_is_agent(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i8, i8* %5, align 1
  %7 = call i32 @vlc_http_istoken(i8 signext %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %58

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %53, %10
  %12 = load i8*, i8** %3, align 8
  %13 = call i64 @vlc_http_token_length(i8* %12)
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %31

16:                                               ; preds = %11
  %17 = load i8*, i8** %3, align 8
  %18 = load i64, i64* %4, align 8
  %19 = getelementptr inbounds i8, i8* %17, i64 %18
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %21, 47
  br i1 %22, label %23, label %30

23:                                               ; preds = %16
  %24 = load i64, i64* %4, align 8
  %25 = add i64 %24, 1
  %26 = load i8*, i8** %3, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 %25
  store i8* %27, i8** %3, align 8
  %28 = load i8*, i8** %3, align 8
  %29 = call i64 @vlc_http_token_length(i8* %28)
  store i64 %29, i64* %4, align 8
  br label %30

30:                                               ; preds = %23, %16
  br label %34

31:                                               ; preds = %11
  %32 = load i8*, i8** %3, align 8
  %33 = call i64 @vlc_http_comment_length(i8* %32)
  store i64 %33, i64* %4, align 8
  br label %34

34:                                               ; preds = %31, %30
  %35 = load i64, i64* %4, align 8
  %36 = icmp eq i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %34
  br label %57

38:                                               ; preds = %34
  %39 = load i64, i64* %4, align 8
  %40 = load i8*, i8** %3, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 %39
  store i8* %41, i8** %3, align 8
  %42 = load i8*, i8** %3, align 8
  %43 = load i8, i8* %42, align 1
  %44 = sext i8 %43 to i32
  %45 = icmp eq i32 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %38
  store i32 1, i32* %2, align 4
  br label %58

47:                                               ; preds = %38
  %48 = load i8*, i8** %3, align 8
  %49 = call i64 @strspn(i8* %48, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i64 %49, i64* %4, align 8
  %50 = load i64, i64* %4, align 8
  %51 = icmp eq i64 %50, 0
  br i1 %51, label %52, label %53

52:                                               ; preds = %47
  br label %57

53:                                               ; preds = %47
  %54 = load i64, i64* %4, align 8
  %55 = load i8*, i8** %3, align 8
  %56 = getelementptr inbounds i8, i8* %55, i64 %54
  store i8* %56, i8** %3, align 8
  br label %11

57:                                               ; preds = %52, %37
  store i32 0, i32* %2, align 4
  br label %58

58:                                               ; preds = %57, %46, %9
  %59 = load i32, i32* %2, align 4
  ret i32 %59
}

declare dso_local i32 @vlc_http_istoken(i8 signext) #1

declare dso_local i64 @vlc_http_token_length(i8*) #1

declare dso_local i64 @vlc_http_comment_length(i8*) #1

declare dso_local i64 @strspn(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
